updating the menuItemslist.html
changing the display of the menu items within the master details page

--- a/week 4/src/items/templates/menuitemslist.html
+++ b/week 4/src/items/templates/menuitemslist.html
@@ -1,5 +1,4 @@
 <div ng-repeat="item in $ctrl.items" class="well">
-	<p>{{item.id}}</p>
-	<p>{{item.name}}</p>
-	<p>{{item.description}}</p>
+	<p>id: {{item.id}} <span class="pull-right">name: {{item.name}}</span></p>
+	<p>desc: {{item.description}}</p>
 </div>
