--- a/week 4/src/categories/templates/categories.html
+++ b/week 4/src/categories/templates/categories.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-  	 <h3>Please select a category and lets <br> <span class="bname">Get <span>Started</span></span></h3>
+  	 <h2>Please select a category and lets <span class="bname">Get <span>Started</span></span></h2>
   </div>
 </div>
 
