--- a/week 4/src/items/templates/menuitemslist.html
+++ b/week 4/src/items/templates/menuitemslist.html
@@ -1,4 +1,5 @@
 <div ng-repeat="item in $ctrl.items" class="well">
-	<p>id: {{item.id}} <span class="pull-right">name: {{item.name}}</span></p>
+	<p>id: {{item.id}}</p>
+	<p>name: {{item.name}}</p>
 	<p>desc: {{item.description}}</p>
 </div>
